--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "icons",
-  "module": "src/index.ts",
+  "name": "@editcode-hub/icons",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/editcode-hub"
+  },
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "typings": "dist/icons.d.ts",
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "scripts": {
     "load-icons": "bun scripts/process.ts",
     "icons": "bun run load-icons && svgr ./src/svg",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build:types": "tsc",
+    "build:bundle": "sudo rm -rf dist && node_modules/.bin/rollup --c ./build/rollup.config.bundle.js",
+    "dev": "rollup -w -c ./build/rollup.config.dev.js",
+    "build": "rollup -c ./build/rollup.config.prod.js"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
@@ -27,12 +40,24 @@
     "vitest": "^3.1.2"
   },
   "peerDependencies": {
+    "react": "*",
+    "react-dom": "*",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-replace": "^6.0.2",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@svgr/cli": "^8.1.0",
     "@types/fs-extra": "^11.0.4",
     "@types/listr": "^0.14.9",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^19.1.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
@@ -41,11 +66,21 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
     "fs-extra": "^11.3.0",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "listr": "^0.14.3",
+    "npm": "^11.3.0",
     "prettier": "^3.5.3",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "rollup": "^4.40.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-dts": "^6.2.1",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^3.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.2"
   }
 }
