--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,18 +5,21 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
+    "noEmit": false,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "declaration": true,
+    "declarationDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
+    "outDir": "dist",
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"]
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.stories.tsx", "stories", "**/*.test.*"]
 }
