--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@editcode-hub/icons",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/editcode-hub"
+    "registry": "https://npm.pkg.github.com/"
   },
-  "version": "1.0.0",
+  "version": "1.0.6",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/icons.d.ts",
