--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "@editcode-hub/icons",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   },
-  "version": "1.0.6",
+  "repository": "https://github.com/editcode-hub/icons",
+  "author": {
+    "name": "Evgeny Fomin",
+    "email": "itsevgenyfomin@gmail.com",
+    "url": "https://evgenyfomin.com"
+  },
+  "version": "1.0.11",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/icons.d.ts",
@@ -22,29 +28,6 @@
     "build": "rollup -c ./build/rollup.config.prod.js"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/experimental-addon-test": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
-    "@storybook/test": "^8.6.12",
-    "@types/bun": "latest",
-    "@vitest/browser": "^3.1.2",
-    "@vitest/coverage-v8": "^3.1.2",
-    "eslint-plugin-storybook": "^0.12.0",
-    "playwright": "^1.52.0",
-    "prettierrc": "^0.0.0-5",
-    "storybook": "^8.6.12",
-    "vitest": "^3.1.2"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
@@ -57,8 +40,24 @@
     "@svgr/cli": "^8.1.0",
     "@types/fs-extra": "^11.0.4",
     "@types/listr": "^0.14.9",
-    "@types/prop-types": "^15.7.14",
+    "@chromatic-com/storybook": "^3",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
+    "@storybook/test": "^8.6.12",
+    "@types/bun": "latest",
+    "@vitest/browser": "^3.1.2",
+    "@vitest/coverage-v8": "^3.1.2",
+    "eslint-plugin-storybook": "^0.12.0",
     "@types/react": "^19.1.2",
+    "@types/prop-types": "^15.7.14",
+    "playwright": "^1.52.0",
+    "prettierrc": "^0.0.0-5",
+    "storybook": "^8.6.12",
+    "vitest": "^3.1.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "eslint": "^9.25.1",
@@ -71,9 +70,6 @@
     "listr": "^0.14.3",
     "npm": "^11.3.0",
     "prettier": "^3.5.3",
-    "prop-types": "^15.8.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "rollup": "^4.40.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.2.1",
@@ -82,5 +78,13 @@
     "rollup-plugin-serve": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.2"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "prop-types": "^15.8.1"
   }
 }
